selfhost/test/typechecker/tuple/error_type_mismatch_too_big.1.abra
val t: (Int, String) = (1, "two", [1, 2, 3])